--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=main.css.map */
+model-viewer{width:auto;max-width:1200px;height:700px;background-color:#efefef;margin:0 auto}/*# sourceMappingURL=main.css.map */
