--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -14,10 +14,16 @@
     background-color: red;
     border-radius: 50px;
     border: 0px;
-    width: 45px;
-    height: 38px;
+    width: 40px;
+    height: 40px;
     // display: none;
     transition: all 1s ease-in-out;
+    cursor: pointer;
+  }
+
+  .Hotspot:hover {
+    background-color: blue;
+    border-radius: 50px;
   }
 
   .Hotspot:not([data-visible]) {
