--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -1,4 +1,4 @@
-  // Customize our own hotspot 
+@use '../abstracts/variables' as v;
 
   model-viewer {
     width: auto;
@@ -57,11 +57,11 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     color: rgba(0, 0, 0, 0.8);
     display: block;
-    font-family: Futura, Helvetica Neue, sans-serif;
+    font-family: v.$main-font-family, Helvetica Neue, sans-serif;
     font-size: 18px;
     font-weight: 700;
     left: calc(100% + 1em);
-    max-width: 300px;
+    max-width: 200px;
     overflow-wrap: break-word;
     padding: 0.5em 1em;
     position: absolute;
@@ -70,14 +70,24 @@
     text-align: left;
   }
 
+  .HotspotAnnotation img {
+    max-width: 280px;
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    padding: 5px;
+  }
+
+
   .HotspotAnnotation p {
     color: #333;
-    line-height: 22px;
+    font-size: v.$body-font-size;
+    line-height: 20px;
     font-weight: 300;
   }
 
   .HotspotAnnotation h2 {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 5px;
   }
 
