--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,115 +1,261 @@
 @use "../abstracts" as a;
 @use "../abstracts/variables" as v;
 
+
 ul, li {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 header {
-    padding: 20px;
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 20px;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #logo {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 #logo-white {
-    width: 100px;
-    height: 100%;
+  width: 100px;
+  height: 100%;
 }
 
 #dektop-menu {
-    display: none;
+  display: none;
 }
 
 #dektop-menu nav {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 #dektop-menu ul {
-    display: flex;
+  display: flex;
 }
 
 #dektop-menu li {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 #dektop-menu a {
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-    font-size: 16px;
+  color: white;
+  text-decoration: none;
+  padding: 10px 20px;
+  font-size: 16px;
 }
 
 #dektop-menu a:hover {
-    color: v.$primary-color;
+  color: v.$primary-color;
 }
 
-#hamburger, #close {
-    font-size: 32px;
-    background: none;
-    border: none;
-    color: white;
-    cursor: pointer;
+#burger-icon {
+  width: 40px;
+  height: 30px;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
+
+#burger-icon span {
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 100%;
+  background: white;
+  border-radius: 6px;
+  opacity: 1;
+  left: 0;
+  transition: all 0.3s ease;
+}
+
+#burger-icon span:nth-child(1) {
+  top: 0;
+}
+
+#burger-icon span:nth-child(2) {
+  top: 10px;
+}
+
+#burger-icon span:nth-child(3) {
+  top: 20px;
+}
+
+#burger-icon.open span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 10px;
+  left: 0;
+}
+
+#burger-icon.open span:nth-child(2) {
+  width: 0%;
+  opacity: 0;
+}
+
+#burger-icon.open span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: 10px;
+  left: 0;
+}
+
 
 .overlay {
     display: none;
-    position: fixed;
-    top: 80px;
+    position: absolute;
+    top: 70px;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 40%;
     background-color: black;
     color: white;
-    justify-content: left;
-    align-items: center;
     z-index: 1;
-}
-
-.overlay.open {
-    display: flex;
-}
-
-#close {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-}
+    overflow-y: auto; 
+  }
+  
+  .overlay.open {
+    display: block;
+  }
 
 .overlay ul {
-    list-style-type: none;
-    text-align: center;
+  list-style-type: none;
+  text-align: left;
+  padding-left: 20px;
+  line-height: 30px;
 }
 
 .overlay li {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .overlay a {
-    color: white;
-    font-size: 32px;
-    text-decoration: none;
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
 }
 
 .overlay a:hover {
-    color: a.$primary-color;
+  color: v.$primary-color;
 }
+footer {
+    display: flex;
+    flex-direction: column;
+    padding: 40px 20px;
+    background-color: black;
+    color: white;
+  }
+  
+  #footer-logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  #footer-logo a img {
+    width: 150px;
+  }
+  
+  .footer__nav {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-bottom: 20px;
+  }
+  
+  .footer__nav div {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .footer__nav h2 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .footer__nav-list {
+    display: flex;
+    flex-direction: column; 
+    gap: 10px;
+  }
+  
+  .footer__nav-list li {
+    margin-bottom: 10px;
+  }
+  
+  .footer__nav-list a,
+  .footer__social-links a { 
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+  }
+  
+  .footer__nav-list a:hover,
+  .footer__social-links a:hover { 
+    color: v.$primary-color; 
+  }
+  
+  .footer__social-links {
+    display: flex;
+    flex-direction: column; 
+    gap: 10px;
+  }
+  
+  .footer__social-links li {
+    display: inline-block;
+  }
+  
+  .footer__legal {
+    text-align: center;
+    font-size: 0.9rem;
+    color: white;
+    margin-top: 30px;
+  }
+
+
+
 
 @media (min-width: 768px) {
-    #hamburger {
+    #burger-icon {
         display: none;
-    }
+      }
 
-    #dektop-menu {
-        display: flex;
-        align-items: center;
-    }
+
+      .overlay {
+        display: none; /* Ensure the overlay does not appear */
+      }
+
+
+  #nav-icon4 {
+    display: none;
+  }
+
+  #dektop-menu {
+    display: flex;
+    align-items: center;
+  }
+
+  .footer__nav {
+    flex-direction: row; 
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .footer__nav div {
+    flex-direction: column;
+  }
+
+  .footer__nav-list {
+    flex-direction: column;
+  }
+
+  .footer__social-links {
+    flex-direction: column; 
+    justify-content: flex-start;
+  }
+
 }
