Added Hero Banner
In this commit the hero banner and responsive image has been added

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,11 +1,8 @@
 @use 'fonts';
 
-$primary-color: #DA583F;
+$primary-color: #cc9933;
 $secondary-color: #e68a00;
-$accent-color: #6FC1B7;
-$second-accent-color: #ab77a8;
-$background-color: #FFFFF9;
-$body-text-color: #414042;
+$body-text-color: #2c2c2c;
 $main-font-family: 'avenir-next', helvetica, serif;
 
 $font-weight-regular: 100;
