--- a/sass/abstracts/_fonts.scss
+++ b/sass/abstracts/_fonts.scss
@@ -1,5 +1,13 @@
 @font-face {
     font-family: 'avenir-next';
+    src: url('../fonts/AvenirNext-Regular.woff2') format('woff2'),
+         url('../fonts/AvenirNext-Regular.woff') format('woff');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'avenir-next';
     src: url('../fonts/AvenirNext-Medium.woff2') format('woff2'),
          url('../fonts/AvenirNext-Medium.woff') format('woff');
     font-weight: 300;
