Fix Code for Validation
In this commit, the index file has been updated for validation

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,7 +11,7 @@ footer {
 
 #footer-promo {
     width: 100%;
-    margin: 0;
+    margin: 50px 0 0 0;
     padding: 0;
 
     img {
@@ -53,7 +53,7 @@ footer {
     margin-left: 30px;
 }
 
-.footer__nav h2 {
+.footer__nav h3 {
     font-size: 17px;
     font-weight: v.$font-weight-bold;
     margin-bottom: 20px;
