--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -151,7 +151,7 @@ header {
 
 
       .overlay {
-        display: none; /* Ensure the overlay does not appear */
+        display: none; 
       }
 
 
