--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -10,8 +10,8 @@
 
 #model-wrapper {
   display: flex;
-  flex-direction: column; /* Stacks the content vertically on smaller screens */
-  align-items: center; /* Centers the content */
+  flex-direction: column; 
+  align-items: center; 
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
@@ -24,10 +24,9 @@
   justify-content: center;
   text-align: center;
   width: 70%;
-
 }
 
-#model-info h2 {
+#model-info h3 {
   font-size: 32px;
   font-weight: bold;
   color: v.$body-text-color;
@@ -41,7 +40,6 @@
 }
 
 
-/* Mobile Styles */
 @media (max-width: 767px) {
 
   #mobile-info {
@@ -64,7 +62,7 @@
 
   model-viewer {
     width: 100%;
-    height: 400px; 
+    height: 500px; 
     margin-top: 20px;
   }
 
@@ -82,21 +80,20 @@
   }
 }
 
-/* Larger Screens (Min-width 768px) */
+/* 768px --> */
 @media (min-width: 768px) {
 
   #model-wrapper {
     flex-direction: row; 
     justify-content: space-between; 
-
   }
 
   #model-info {
     text-align: left;
     width: 450px;
     margin-left: 30px;
+    margin-top: 0;
   }
-
 
   #mobile-info {
     display: none;
@@ -185,11 +182,13 @@
     font-size: v.$body-font-size;
     line-height: 20px;
     font-weight: 300;
+    margin-top: 0;
   }
 
-  .HotspotAnnotation h2 {
+  .HotspotAnnotation h3 {
     font-size: 20px;
     margin-bottom: 5px;
+    margin-top: 0;
   }
 
   model-viewer::part(default-progress-bar) {
@@ -197,7 +196,6 @@
     background-color: #E89B36;
   }
 
-  /* AR Button Styling */
   #ar-button {
     background-image: url(../images/ar_icon.png);
     background-repeat: no-repeat;
