--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,7 +2,7 @@
 
 #hero-wrapper {
   display: flex;
-  flex-direction: column;  // Default to column for mobile views
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 80px 20px;
@@ -17,12 +17,12 @@
     line-height: 40px;
     
     img {
-      width: 120px; // Adjust logo size
+      width: 120px;
       height: auto;
-      margin-bottom: 20px; // Space between logo and title
+      margin-bottom: 20px; 
     }
 
-    h2 {
+    h3 {
       font-size: 48px;
       font-weight: bold;
       color: v.$body-text-color;
@@ -57,15 +57,15 @@
       line-height: 50px;
 
       img {
-        margin-bottom: 15px; // Adjust space for larger screens
-        width: 100px; // Slightly smaller logo on larger screens
+        margin-bottom: 15px; 
+        width: 100px;
       }
     }
 
     #hero-image {
-      max-width: 85%; 
+      max-width: 100%; 
       min-width: 70%;
-      margin-left: 30px;  // Adjusted margin for a larger image
+      margin-left: 30px; 
     }
   }
 
@@ -82,14 +82,19 @@
       line-height: 50px;
 
       img {
-        margin-bottom: 20px; // Maintain space between logo and title
-        width: 120px; // Keep logo size consistent for large screens
+        margin-bottom: 20px;
+        width: 120px; 
       }
     }
 
     #hero-image {
-      max-width: 75%; 
-      margin-left: 50px;  // Adjust margin for larger screens
+      max-width: 100%; 
+      margin-left: 50px; 
+      img {
+        width: 100%;
+        height: auto;
+      }
+
     }
   }
 }
