--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -46,6 +46,7 @@
     text-align: center;
     margin-top: 40px;
     line-height: 15px;
+    margin-bottom: 40px;
     img { 
         width: 100%;
         border-radius: 8px;
