--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+
 }
 
 #model-wrapper {
@@ -14,7 +14,7 @@
   align-items: center; 
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 0 30px 0;
   padding: 20px;
 }
 
@@ -24,6 +24,7 @@
   justify-content: center;
   text-align: center;
   width: 70%;
+  margin: 0;
 }
 
 #model-info h3 {
@@ -63,7 +64,7 @@
   model-viewer {
     width: 100%;
     height: 500px; 
-    margin-top: 20px;
+    margin: 0;
   }
 
   .HotspotAnnotation,
